# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html) and [PEP440](https://www.python.org/dev/peps/pep-0440/)

## [Unreleased]

1.1.0 - 2019-09-29
---
### Added
- demo code for `pytest-mock` usage
- supporting context_manager style proxy-usage

1.0.0 - 2019-07-15
---
### Added
- basic function and doc


[Unreleased]: https://github.com/koyo922/kinoko/compare/master..HEAD