@@ -39,6 +39,10 @@ install_requires =
     typing; python_version < "3.4"
     tornado<=4.4.2; python_version < "3.4"
     tornado; python_version >= "3.4"
+    numpy==1.16.5; python_version < "3.4"
+    pandas==0.24.0; python_version < "3.4"
+    pandas; python_version >= "3.4"
+    IPython<=5.8.0; python_version < "3.4"
 
 tests_require =
     pytest
