@@ -5,6 +5,8 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html) and [PEP440](https://www.python.org/dev/peps/pep-0440/)
 
 ## [Unreleased]
+### Added
+- pandas display more columns/col_width
 
 1.1.0 - 2019-09-29
 ---
@@ -18,4 +20,4 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - basic function and doc
 
 
-[Unreleased]: https://github.com/koyo922/kinoko/compare/master..HEAD
+[Unreleased]: https://github.com/koyo922/kinoko/compare/dev..HEAD
